--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.14.2",
     "split-type": "^0.3.3"
   },
   "devDependencies": {
